# artifacts/api-server/src/routes/index.ts
@@ -1,12 +1,14 @@
 import { Router, type IRouter } from "express";
 import healthRouter from "./health";
-import bidetsRouter from "./bidets";
+import restroomsRouter from "./restrooms";
+import auditsRouter from "./audits";
 import authRouter from "./auth";
 
 const router: IRouter = Router();
 
 router.use(healthRouter);
-router.use(bidetsRouter);
+router.use(restroomsRouter);
+router.use(auditsRouter);
 router.use(authRouter);
 
 export default router;
